--- a/assets/css/style-sports.css
+++ b/assets/css/style-sports.css
@@ -20,10 +20,6 @@ h2 {
   /* background-color: #2c2c2c;
   color: white !important; */
 }
-.table > :not(caption) > * > * {
-  /* background-color: transparent !important;
-  color: #d1d0d0; */
-}
 .btn-more-less {
   font-family: "Righteous", cursive;
   --bs-btn-color: #5a5757;
@@ -53,7 +49,7 @@ h2 {
   justify-content: center;
 }
 .table-today {
-  width: 50%;
+  width: 50% !important;
   border-collapse: collapse;
   /* border: 2px solid #ccc; */
   margin: 10px 0;
@@ -63,7 +59,7 @@ h2 {
   color: rgb(0 137 255);
 }
 .table-today td {
-  padding: 0 8px;
+  padding: 0 8px !important;
   text-align: center;
   /* border: 1px solid #ddd;*/
 }
@@ -297,6 +293,7 @@ h2 {
       } */
 .card-body {
   padding: 5px;
+  width: 100%;
 }
 option {
   font-size: 14px;
@@ -304,10 +301,15 @@ option {
   font-weight: 600;
   text-align: left;
 }
+@media screen and (max-width: 640px){
+.table {
+    width: calc(100% + 15px);
+}
+}
 .table {
   box-shadow: 0 0 10px 0px #8080803d;
   border-radius: 5px;
-  height: 85px;
+  /* height: 85px; */
   border: 1px dotted #0dcaf0db;
   border-collapse: inherit;
 }
@@ -322,7 +324,7 @@ option {
   padding: 10px;
 }
 .table > :not(caption) > * > * {
-  padding: 0.2rem 0.5rem;
+    padding: 0.1rem !important;
 }
 .trEvent {
   height: 40px;
