--- a/assets/css/style-sports.css
+++ b/assets/css/style-sports.css
@@ -12,9 +12,13 @@ body {
   color: #3c3c3c;
 }
 h1,
-h2 {
+h2,
+h3,
+h4,
+h5 {
   font-family: "Righteous", cursive;
   /* color: #d1d0d0 !important; */
+  margin: 0;
 }
 .wadah-description {
   /* background-color: #2c2c2c;
@@ -292,7 +296,7 @@ h2 {
         gap: 20px;
       } */
 .card-body {
-  padding: 5px;
+  padding: 5px !important;
   width: 100%;
 }
 option {
@@ -446,7 +450,7 @@ option.select-ops {
   background-color: #ededed;
 }
 .header-desc2 {
-  padding: 10px 10px 28px;
+  padding: 10px 10px 34px;
   background-color: #ededed;
   margin-bottom: 8px;
 }
