--- a/assets/css/style-sports.css
+++ b/assets/css/style-sports.css
@@ -111,7 +111,7 @@ h5 {
   width: 40px;
   box-shadow: inset 0 0 8px 2px #11bcd3;
   padding: 4px;
-  border-radius: 50%;
+  border-radius: 50% !important;
 }
 .imgLogoNormal:hover {
   box-shadow: inset 0 0 8px 2px #0087fb73;
