--- a/assets/css/style-sports.css
+++ b/assets/css/style-sports.css
@@ -99,10 +99,8 @@ svg {
   width: 62px;
   padding: 0px 4px 4px !important;
   border-radius: 4px;
-  border-top: 1px solid transparent !important;
-  border-right: 1px solid transparent !important;
-  border-left: 1px solid transparent !important;
-  /* border-bottom: 1px solid #c9c9c9 !important;*/
+  border: 1px solid transparent !important;
+  
 }
 .vsTeam {
   width: 10px;
