--- a/assets/css/style-sports.css
+++ b/assets/css/style-sports.css
@@ -167,6 +167,12 @@ padding-bottom: 16px !important;
 thImgTeamJersey{
 padding: 16px 2px !important;
 }
+thJersey{
+padding: 16px 0;
+}
+tdJersey{
+padding: 16px 0;
+}
 .jersey-home {
   text-align: center;
   padding-right: 10px;
