--- a/assets/css/style-sports.css
+++ b/assets/css/style-sports.css
@@ -119,7 +119,7 @@ svg {
   box-shadow: inset 0 0 8px 2px #0087fb73;
 }
 .scoreToday {
-  color: #0d2d44e3;
+/*   color: #0d2d44e3; */
   /* width: 93px; */
   /* height: 60px; */
   font-size: 28px;
