--- a/assets/css/style-sports.css
+++ b/assets/css/style-sports.css
@@ -332,6 +332,7 @@ option {
   font-family: system-ui;
   font-weight: 600;
   text-align: left;
+  color: initial;
 }
 @media screen and (max-width: 640px){
 .table {
@@ -399,7 +400,7 @@ tbody {
   border-bottom: 1px solid #0000;
   white-space: nowrap;
   line-height: 26px;
-  color: #444;
+  color: inherit;
   text-decoration: none;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -413,7 +414,7 @@ tbody {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-color: #fff;
+  background-color: inherit;
   /* background-image: -webkit-gradient(
     linear,
     left bottom,
