--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -4,6 +4,7 @@
 }
 .card {
   position: relative;
+    width: 150px;
 }
 .card-body {
   padding: 0;
@@ -54,7 +55,8 @@
   );
 }
 .card-detail {
-  padding: 5px;
+  padding: 2px;
+  width: 12.455555%;
 }
 .card-detail-canava {
   padding: 5px;
@@ -70,7 +72,7 @@
 }
 @media (min-width: 768px) {
   .posterMotieTv {
-    height: 250px;
+    height: 220px;
   }
   .card-detail-canava {
     width: 10%;
