--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -111,7 +111,7 @@
   display: flex;
   margin-bottom: 10px;
   padding: 10px;
-  border: 1px solid #ddd;
+  border: 1px solid #0d6efd38;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgb(0 0 0 / 10%);
 }
