--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -227,9 +227,9 @@ margin-bottom: -1px;
     font-weight: 700;
     font-family: helvetica neue,Helvetica,arial,sans-serif;
     background-color: transparent;
-    background-image: -moz-linear-gradient(#159fff,#1a6bb3);
-    background-image: -webkit-linear-gradient(#159fff,#1a6bb3);
-    background-image: linear-gradient(#159fff,#1a6bb3);
+    background-image: -moz-linear-gradient(#002742,#1a6bb3);
+    background-image: -webkit-linear-gradient(#002742,#1a6bb3);
+    background-image: linear-gradient(#002742,#1a6bb3);
     background-repeat: repeat-x;
     -webkit-box-shadow: 0 1px 2px rgb(0 0 0 / 25%);
     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.25);
@@ -254,9 +254,9 @@ margin-bottom: -1px;
     font-weight: 700;
     font-family: helvetica neue,Helvetica,arial,sans-serif;
     background-color: transparent;
-    background-image: -moz-linear-gradient(#159fff,#1a6bb3);
-    background-image: -webkit-linear-gradient(#159fff,#1a6bb3);
-    background-image: linear-gradient(#159fff,#1a6bb3);
+    background-image: -moz-linear-gradient(#002742,#1a6bb3);
+    background-image: -webkit-linear-gradient(#002742,#1a6bb3);
+    background-image: linear-gradient(#002742,#1a6bb3);
     background-repeat: repeat-x;
     -webkit-box-shadow: 0 1px 2px rgb(0 0 0 / 25%);
     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.25);
