--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -268,6 +268,24 @@ margin-bottom: -1px;
     border-bottom-left-radius: 3px;
     z-index: 1;
 }
+.widget-title span {
+  float: left;
+  margin-right: 20px;
+  padding: 5px 10px;
+  text-transform: uppercase;
+  color: #fff;
+  background: #0472e8;
+  font-size: 13px;
+}
+.widget-title:after {
+  content: "";
+  background: #0472e8;
+  height: 1px;
+  overflow: hidden;
+  display: block;
+  position: relative;
+  top: 10px;
+}
 
 [ng\:cloak],
 [ng-cloak],
