--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -268,6 +268,9 @@ margin-bottom: -1px;
     border-bottom-left-radius: 3px;
     z-index: 1;
 }
+.widget-title {
+padding: 10px 0;
+}
 .widget-title span {
   float: left;
   margin-right: 20px;
