--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -17,7 +17,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgb(0 0 0 / 76%);
   display: flex;
   align-items: center;
   justify-content: center;
