--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -317,3 +317,21 @@ padding: 10px 0;
     --bs-navbar-brand-color: whitesmoke;
     --bs-navbar-brand-hover-color: #0472e8;
 }
+
+/* BTN Search*/
+.form-control {
+background-color: #fff0;
+border: 1px solid #5a5a5a;
+border-radius: 4px 0 0 4px;
+}
+
+.form-select {
+--bs-form-select-bg-img: url(https://api.iconify.design/ep/arrow-down-bold.svg?color=%230d6efd&width=40&height=40);
+background-color: #fff0;
+color: whitesmoke;
+border-radius:0;
+}
+.btn-search {
+border-radius: 0 4px 4px 0;
+}
+
