--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -327,9 +327,11 @@ border-radius: 4px 0 0 4px;
 
 .form-select {
 --bs-form-select-bg-img: url(https://api.iconify.design/ep/arrow-down-bold.svg?color=%230d6efd&width=40&height=40);
-background-color: #fff0;
-color: whitesmoke;
-border-radius:0;
+    background-color: #fff0;
+    color: #0d6efd;
+    border-radius: 0;
+    border: 1px solid #5a5a5a;
+    border-left: 1px solid #5a5a5a00;
 }
 .btn-search {
 border-radius: 0 4px 4px 0;
