--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -328,6 +328,9 @@ border-radius: 4px 0 0 4px;
  color: #0095ff;
  vertical-align: middle;
 }
+.nav-link {
+  font-size:13px;
+}
 .form-select {
 --bs-form-select-bg-img: url(https://api.iconify.design/ep/arrow-down-bold.svg?color=%230d6efd&width=40&height=40);
     background-color: #fff0;
