--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -334,6 +334,9 @@ vertical-align: text-bottom;
 .nav-link {
   font-size:13px;
 }
+.nav-reg {
+  padding: 0px 39px 0px 0px;
+}
 .form-select {
 --bs-form-select-bg-img: url(https://api.iconify.design/ep/arrow-down-bold.svg?color=%230d6efd&width=40&height=40);
     background-color: #fff0;
