--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -334,6 +334,9 @@ vertical-align: text-bottom;
 .nav-link {
   font-size:13px;
 }
+.navbar-brand {
+    margin-right: 36px;
+}
 .nav-reg {
   padding: 0px 39px 0px 0px;
 }
