--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -325,8 +325,10 @@ border: 1px solid #5a5a5a;
 border-radius: 4px 0 0 4px;
 }
 .coni-menu {
-color: #0095ff !important;
-vertical-align: text-bottom;
+    color: #0095ff !important;
+    vertical-align: text-bottom;
+    padding-right: 3px;
+    padding-bottom: 1px;
 }
 .kotak-pencarian::placeholder {
   color: #0d6efd;
