--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -669,6 +669,8 @@ form .input-group {
 }
 .table-hover > tbody > tr:hover {
   background-color: #222;
+  border-left: 1px solid #80808000 !important;
+  border-right: 1px solid #80808000 !important;
 }
 .table th {
   white-space: nowrap;
