--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -347,7 +347,7 @@ a.nodecor:focus {
 }
 /* Modal */
 .modal {
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: black;
 }
 .modal-dialog {
   overflow: hidden;
