--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -2249,6 +2249,9 @@ footer#site-footer {
   i.jacob {
     font-size: 11px;
   }
+.post-recom {
+    grid-template-columns: repeat(2, 1fr);
+}
 }
 @media (max-width: 992px) {
   [class*="col-0"] {
