--- a/movie-tv/css/stylemt.css
+++ b/movie-tv/css/stylemt.css
@@ -2760,3 +2760,6 @@ font-size: 13px;
   background-color: #fff0 !important;
   border: 1px solid #ddd0 !important;
 }
+.overview-tvmovie {
+padding: 20px 13px 13px;
+}
