--- a/quran/css/v13quran2023.css
+++ b/quran/css/v13quran2023.css
@@ -110,11 +110,17 @@
     line-height: 18px; */
     color: #020202;
     border-radius: 10px;
-    background: #51abeb;
+    /* background: #51abeb; */
     width: 28px;
     height: 18px;
     padding-left: 5px;
     line-height: 15px;
+    box-shadow: inset 0 0 4px 1px #0954dd;
+}
+.btn-bg:hover {
+  color: #ffffff;
+    box-shadow: inset 0 0 4px 1px #065cf9;
+    background: #065cf9;
 }
 .bungkus{
     display: flex;
