--- a/quran/css/v13quran2023.css
+++ b/quran/css/v13quran2023.css
@@ -51,6 +51,9 @@
   font-style: normal;
 }
 
+.SuraNames {
+  font-family: SuraNames ;
+}
 .quran-wrapper {
     padding: 0px 13px 20px 13px;
     border-radius: 15px;
