--- a/quran/css/v13quran2023.css
+++ b/quran/css/v13quran2023.css
@@ -52,7 +52,11 @@
 }
 
 .SuraNames {
-  font-family: SuraNames ;
+  fofont-family: SuraNames !important;
+    color: #0caf13;
+    font-weight: 500 !important;
+    font-size: 42px;
+    margin: -13px !important;
 }
 .quran-wrapper {
     padding: 0px 13px 20px 13px;
