--- a/quran/css/v13quran2023.css
+++ b/quran/css/v13quran2023.css
@@ -51,7 +51,7 @@
   font-style: normal;
 }
 
-.SuraNames {
+.suraNames {
     font-family: SuraNames !important;
     color: #0caf13;
     font-weight: 500 !important;
