--- a/quran/css/v13quran2023.css
+++ b/quran/css/v13quran2023.css
@@ -186,6 +186,6 @@ button {
 .offcanvas-header {
   padding: 0.5rem 1rem !important;
 }
-ng-cloak {
-  display: none;
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
 }
