--- a/quran/css/v13quran2023.css
+++ b/quran/css/v13quran2023.css
@@ -129,19 +129,19 @@
     height: 21px;
     padding-left: 2px;
     line-height: 18px; */
-    color: #020202;
+    color: #1e8d3c;
     border-radius: 10px;
     /* background: #51abeb; */
     width: 28px;
     height: 18px;
     padding-left: 5px;
     line-height: 17px;
-    box-shadow: inset 0 0 4px 1px #0954dd;
+    /*box-shadow: inset 0 0 4px 1px #0954dd;*/
 }
 .btn-bg:hover {
-  color: #ffffff;
-    box-shadow: inset 0 0 4px 1px #065cf9;
-    background: #065cf9;
+  color: #777474;
+    /* box-shadow: inset 0 0 4px 1px #065cf9; */
+    /* background: #065cf9; */
 }
 .bungkus{
     display: flex;
