--- a/quran/css/v13quran2023.css
+++ b/quran/css/v13quran2023.css
@@ -72,7 +72,7 @@
 .juzAyatType {font-size: 12px;}
 .quran-wrapper {
     padding: 0px 13px 20px 13px;
-    border-radius: 15px;
+    border-radius: 8px;
     background: rgb(79 149 44);
     background: linear-gradient(0deg, rgb(50 149 44 / 0%) 0%, rgb(19 107 22 / 5%) 50%, rgb(16 175 22 / 19%) 100%);
 }
@@ -85,9 +85,10 @@
 }
 .surah-title {
     text-align: center;
-    border-bottom: 2px solid #1d9d51;
+    box-shadow: 0 0 5px 0px #1d9d51;
+    /* border-bottom: 2px solid #1d9d51; */
     padding: 20px;
-    border-radius: 15px;
+    border-radius: 5px;
     background: rgb(44,148,149);
     background: linear-gradient(0deg, rgb(50 149 44 / 0%) 0%, rgb(19 107 22 / 5%) 50%, rgb(16 175 22 / 19%) 100%);
 }
