--- a/quran/css/v13quran2023.css
+++ b/quran/css/v13quran2023.css
@@ -160,7 +160,7 @@
     font-size: 28px;
     text-align: right;
     /* padding: 20px; */
-    margin: 0 !important;
+    margin: 10px 0 0 !important;
     line-height: 58px;
 }
   .nomorKiri {
